<resources>
    <string name="app_name">QuizMakerApp</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="teacher_login">TEACHER LOGIN</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="todo">TODO</string>
    <string name="no_account_yet">No account yet? Click here!</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="full_name">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="user_list">USER LIST</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="update_account">UPDATE ACCOUNT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="subjects">TOPICS</string>
    <string name="subject_name">TOPIC NAME</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="true_or_false">True or False</string>
    <string name="question_text">QUESTION TEXT</string>
    <string name="question_answer">QUESTION ANSWER</string>
    <string name="question_type">QUESTION TYPE</string>
    <string name="enter_question">Enter question</string>
    <string name="check_all_correct_answers_that_apply">Check the correct answer</string>
    <string name="trueanswer">TRUE</string>
    <string name="falseanswer">FALSE</string>
    <string name="enter_text_here">Enter text here.</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="edit_question">EDIT QUESTION</string>
    <string name="pick_a_subject">PICK A TOPIC</string>
    <string name="subject_name_quiz">TOPIC NAME QUIZ</string>
    <string name="score">Score:</string>
    <string name="quiz_maker">Quiz Maker</string>
    <string-array name="acount_type_array">
        <item>ACCOUNT TYPE</item>
        <item>TEACHER</item>
        <item>STUDENT</item>
    </string-array>
    <string name="yes">YES!</string>
    <string name="everything_is_working">Everything is working</string>
    <string name="continue_">Continue</string>
    <string name="uh_snap">UH-SNAP!</string>
    <string name="something_just_broke">Something just broke</string>
    <string name="go_back">Go back</string>

</resources>