<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_question"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check_all_correct_answers_that_apply"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtQuestion" />

    <EditText
        android:id="@+id/edtChoiceA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chbA"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtChoiceB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chbB"
        app:layout_constraintTop_toBottomOf="@+id/edtChoiceA" />

    <EditText
        android:id="@+id/edtChoiceC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chbC"
        app:layout_constraintTop_toBottomOf="@+id/edtChoiceB" />

    <EditText
        android:id="@+id/edtChoiceD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chbD"
        app:layout_constraintTop_toBottomOf="@+id/edtChoiceC" />

    <CheckBox
        android:id="@+id/chbA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtChoiceA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtChoiceA" />

    <CheckBox
        android:id="@+id/chbB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtChoiceB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtChoiceB" />

    <CheckBox
        android:id="@+id/chbC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtChoiceC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtChoiceC" />

    <CheckBox
        android:id="@+id/chbD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtChoiceD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtChoiceD" />

</androidx.constraintlayout.widget.ConstraintLayout>