<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5B8B7"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:background="#E5B8B7"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/quizmakerlogo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginTop="40dp"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/linteachstud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTeacher"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_tea_stu"
                    android:fontFamily="@font/cabin"
                    android:shadowColor="#715741"
                    android:shadowDx="-2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/teacher"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnStudent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha=".1"
                    android:background="@drawable/bg_btn_tea_stu"
                    android:fontFamily="@font/cabin"
                    android:shadowColor="#715741"
                    android:shadowDx="-2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/student"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linteachstud"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/et_bg"
                    android:ems="10"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColorHint="#C5BD98"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_bg"
                    android:ems="10"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="#C5BD98"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/cabin"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/teacher_login"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cabin"
                android:text="@string/no_account_yet"
                android:textColor="#0000EE" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>