<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5B8B7"
    tools:context=".activity.AdminUpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_user_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_tea_stu"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cabin"
                android:shadowColor="#715741"
                android:shadowDx="-2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/update_account"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edtFullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/black"
        android:textColorHint="#C5BD98"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/black"
        android:textColorHint="#C5BD98"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFullname" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/black"
        android:textColorHint="#C5BD98"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edtConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/black"
        android:textColorHint="#C5BD98"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/cabin"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirm" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/cabin"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>